# Fingerprint-for-windows

./: FingerprintAnalyzerGUI.py  KEY.PY  高级指纹提取研究.html
Fingerprint-C++/: CMakeLists.txt
Fingerprint-C++/src/: cpu_fetcher.cpp  cpu_fetcher.hpp  crypto_handler.cpp  crypto_handler.hpp  disk_fetcher.cpp  disk_fetcher.hpp  gpu_fetcher.cpp  gpu_fetcher.hpp  main.cpp  os_benchmark_fetcher.cpp  os_benchmark_fetcher.hpp  pqc_config_handler.cpp  pqc_config_handler.hpp  sgx_fetcher.cpp  sgx_fetcher.hpp  smbios_fetcher.cpp  smbios_fetcher.hpp  tpm_handler.cpp  tpm_handler.hpp
Fingerprint-GUI/: backend.py  main_gui.py  requirements.txt
Fingerprint-GUI/proto/: fingerprint.proto
Fingerprint-GUI/ui/: analysis_tab.py  comparison_tab.py  config_tab.py
Fingerprint-PY/: config_handler.py  crypto_handler.py  fingerprint_cli.py  fingerprint_pb2.py  tpm_handler.py
Fingerprint-PY/fetchers/: cpu_fetcher.py  disk_fetcher.py  gpu_fetcher.py  os_benchmark_fetcher.py  smbios_fetcher.py  tee_fetcher.py
